trunk/Archive2/0f/710490ca012f72/output
main.cpp:7:8: error: 'vector' is not a class template
 struct vector<T> : basic_vector<T, allocator<T>>
        ^
main.cpp:7:32: error: expected template-name before '<' token
 struct vector<T> : basic_vector<T, allocator<T>>
                                ^
main.cpp:7:32: error: expected '{' before '<' token
main.cpp:7:32: error: expected unqualified-id before '<' token
main.cpp:9:2: warning: extra ';' [-Wpedantic]
 }; 
  ^
main.cpp:14:40: error: expected template-name before '<' token
 struct vector<Traits<T>> : basic_vector<T, typename Traits<T>::allocator> {}
                                        ^
main.cpp:14:40: error: expected '{' before '<' token
main.cpp:14:40: error: expected unqualified-id before '<' token
main.cpp:14:76: error: expected '}' at end of input
 struct vector<Traits<T>> : basic_vector<T, typename Traits<T>::allocator> {}
                                                                            ^
